added all the service layer JUnit tests